<resources>
    <string name="app_name">BinGo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_komunitas">Komunitas</string>
    <string name="title_profil">Profil</string>
    <string name="bin_points">Bin-Points</string>
    <string name="_0">0</string>
    <string name="postingan_terbaru">Postingan Terbaru</string>
    <string name="beranda_prefix_greeting">Selamat datang,</string>
    <string name="lokasi">Lokasi :</string>
    <string name="cek_tempat_sampah_terdekat">Cek tempat sampah terdekat!</string>
    <string name="komunitas_bin_go">Komunitas Bin-Go</string>
    <string name="reward_bin_points">Reward Bin-Points</string>
    <string name="riwayat_bin_points">Riwayat Bin-Points</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="title">Judul</string>
    <string name="cari_tpu">Cari TPU</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="sudah_punya_akun_login">Sudah punya akun? Login</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="username_tidak_valid">Username tidak valid</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="password_tidak_valid">Password tidak valid, dengan minimal 8 karakter</string>
    <string name="password_tidak_sama">Konfirmasi kata sandi tidak sesuai</string>
    <string name="anda_belum_login">Anda belum login</string>
    <string name="klik_disini_untuk_login">Klik untuk login</string>
    <string name="error_title_required">Judul tidak boleh kosong</string>
    <string name="error_caption_required">Caption tidak boleh kosong</string>
    <string name="error_upload_file">Gagal mengupload file</string>
    <string name="komentar">komentar</string>
    <string name="suka">menyukai</string>
    <string name="you_cant_like_your_own_post">Anda tidak dapat menyukai postingan Anda sendiri</string>
    <string name="tulis_komentar">Tulis komentar...</string>
    <string name="unggah_gambar">Unggah Gambar</string>
    <string name="tidak_ada_gambar_yang_terunggah">Tidak ada gambar yang terunggah</string>
    <string name="papan_skor">Papan skor</string>
    <string name="keterangan_format_gambar">Rekomendasi ukuran rasio gambar adalah 1:1.41. (Rasio kertas metrics, contoh A1, A2, A3, A4, dst)</string>
    <string name="belum_ada_lokasi_terpilih">Belum ada lokasi terpilih</string>
    <string name="buka_bin_locator">Buka Bin Locator</string>
    <string name="locator">Locator</string>
    <string name="location">lokasi</string>
    <string name="post">Post</string>
    <string name="report_title">Lapor</string>
    <string name="kembali">kembali</string>
    <string name="lokasi_saya">Lokasi saya</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="error_location_required">Mohon pilih lokasi pelaporan terlebih dahulu</string>
    <string name="Terpilih">Terpilih</string>
    <string name="lapor">Lapor !</string>
    <string name="simpan">Simpan</string>
    <string name="error_upload_failed">Gagal mengunggah konten</string>
    <string name="semua">Semua</string>
    <string name="bin_locator">Bin-Locator</string>
    <string name="bin_report">Bin-Report</string>
    <string name="rute">Rute</string>
    <string name="v1_0_0">v1.0.0</string>

</resources>