<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.komunitas.KomunitasFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:id="@+id/komunitas_text_input_layout_search"
        style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurfaceContainerHighest"
        android:hint="@string/title"
        app:boxCornerRadiusBottomEnd="0dp"
        app:boxCornerRadiusBottomStart="0dp"
        app:boxCornerRadiusTopEnd="0dp"
        app:boxCornerRadiusTopStart="0dp"
        app:boxStrokeWidth="0dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_close_24"
        app:endIconTint="?attr/colorOnSurface"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ketik penulusuran disini ..."
            android:maxLines="1"
            android:textColor="?attr/colorOnSurface" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/komunitas_text_view_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp"
        android:text="@string/title_komunitas"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider"
        app:layout_constraintEnd_toStartOf="@+id/komunitas_open_search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/komunitas_open_search_button"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:icon="@drawable/ic_search_24"
        app:iconTint="?attr/colorOnSurface"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/materialDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="64dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/komunitas_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialDivider">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Semua" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bin-Report" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bin-Tricks" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bin-Learn" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/komunitas_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komunitas_tab_layout"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/komunitas_floating_action_button_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/floatingActionButtonSmallStyle"

        app:backgroundTint="@color/fab_background_report"
        app:srcCompat="@drawable/ic_campaign_24"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/komunitas_extended_floating_action_button"
        app:layout_constraintEnd_toEndOf="@+id/komunitas_extended_floating_action_button"
        android:contentDescription="Lapor" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/komunitas_extended_floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="Buat post"
        app:icon="@drawable/ic_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:visibility="gone"
        android:id="@+id/komunitas_extended_floating_action_button_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/lapor"
        app:backgroundTint="@color/fab_background_report"
        app:icon="@drawable/ic_campaign_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>