<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.beranda.BerandaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/beranda_card_header"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:alpha="0.3"
            app:cardBackgroundColor="?attr/colorPrimaryContainer"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp" />

        <include
            android:id="@+id/include"
            layout="@layout/component_card_bin_point"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/beranda_card_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beranda_card_header" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beranda_text_view_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/beranda_prefix_greeting"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            android:textColor="?attr/colorOnPrimaryContainer"
            app:layout_constraintBottom_toBottomOf="@+id/beranda_card_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/beranda_card_header" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/beranda_card_beranda_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:cardBackgroundColor="?attr/colorTertiaryContainer"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/beranda_card_bin_locator_text_view_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="marquee"
                    android:text="@string/cek_tempat_sampah_terdekat"
                    android:textAppearance="?attr/textAppearanceHeadlineSmall"
                    android:textColor="?attr/colorOnTertiaryContainer"
                    app:layout_constraintBottom_toTopOf="@+id/beranda_card_bin_locator_text_view_user_location"
                    app:layout_constraintEnd_toStartOf="@+id/beranda_card_image_view_illustration_1"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/beranda_card_image_view_illustration_1"
                    app:layout_constraintVertical_bias="0.48000002" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/beranda_card_bin_locator_text_view_user_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_my_location_24"
                    android:drawablePadding="8dp"
                    android:maxLines="2"
                    android:text="@string/lokasi"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:textColor="?attr/colorOnTertiaryContainer"
                    app:drawableTint="?attr/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/beranda_card_image_view_illustration_1"
                    app:layout_constraintEnd_toEndOf="@+id/beranda_card_bin_locator_text_view_title"
                    app:layout_constraintStart_toStartOf="@+id/beranda_card_bin_locator_text_view_title"
                    app:layout_constraintTop_toTopOf="@+id/beranda_card_image_view_illustration_1"
                    app:layout_constraintVertical_bias="0.86" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/beranda_card_image_view_illustration_1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/image_illustration_1"
                    app:layout_constraintDimensionRatio="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/beranda_card_guideline_vertical"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/beranda_card_guideline_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.6" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beranda_text_view_title_komunitas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/komunitas_bin_go"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toStartOf="@+id/beranda_button_go_to_komunitas"
            app:layout_constraintStart_toStartOf="@+id/include"
            app:layout_constraintTop_toBottomOf="@+id/beranda_card_beranda_container" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beranda_text_view_description_komunitas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Komunitas adalah ... cek segera"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/beranda_button_go_to_komunitas"
            app:layout_constraintEnd_toEndOf="@+id/beranda_text_view_title_komunitas"
            app:layout_constraintStart_toStartOf="@+id/include"
            app:layout_constraintTop_toBottomOf="@+id/beranda_text_view_title_komunitas"
            app:layout_constraintVertical_bias="0.19999999" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/beranda_button_go_to_komunitas"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            app:icon="@drawable/ic_chevron_right_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beranda_card_beranda_container" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/beranda_recycler_most_like_komunitas"
            tools:itemCount="1"
            tools:listitem="@layout/component_card_komunitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beranda_text_view_description_komunitas" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>